--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
+    "react-calendar": "^3.4.0",
+    "react-currency-input-field": "^3.5.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
@@ -45,6 +47,7 @@
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.8",
+    "@types/react-calendar": "^3.4.3",
     "@types/styled-components": "^5.1.14",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
