--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-calendar": "^3.4.0",
     "react-currency-input-field": "^3.5.1",
